--- a/src/index.scss
+++ b/src/index.scss
@@ -2,11 +2,15 @@ body {
     background: #1e1e1e;
 }
 
-
 #root {
-    max-width: 1500px;
-    margin: 0 auto;
+    min-width: 800px;
 }
+
+
+// #root {
+//     max-width: 1500px;
+//     margin: 0 auto;
+// }
 
 /*
 171, 200, 192 => #ABC8C0
